@@ -14,10 +14,15 @@ Version 3.1  [ (under development) ]
             - Redesigned to do its work through classes NFacePairing and
               NGluingPerms.
             - Added support for arbitrary criterion functions.
+            - Added support for splitting a census into pieces.
         Class NFacePairing, NGluingPerms:
             - Added to bear the brunt of census generation.
         File nperm.h:
             - New arrays allPermsS2Inv, allPermsS3Inv, allPermsS4Inv.
+    UTILITIES:
+        tricensus:
+            - Completely redesigned interface (now command-line based).
+            - Supports splitting a census into pieces.
 
 Version 3.0  [ 28 June, 2002 ] - The "XML, about bloody time" release.
     OVERALL:
